--- a/main.html
+++ b/main.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h2 class="tA fS">Internship Form</h2>
+    <form class="row g-3">
+        <div class="col-md-4">
+          <label for="inputfirstname" class="form-label">First Name</label>
+          <input type="text" class="form-control" id="first-name-input" required>
+        </div>
+        <div class="col-md-4">
+          <label for="inputlastname" class="form-label">Last Name</label>
+          <input type="text" class="form-control" id="last-name-input" required>
+        </div>
+        <div class="col-md-4">
+            <label for="inputemail" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="email-input" required>
+          </div>
+        <div class="col-5">
+          <label for="inputcollege" class="form-label">College</label>
+          <input type="text" class="form-control" id="college-input" required>
+        </div>
+        <div class="col-md-4">
+            <label for="inputgraduationyear" class="form-label">Graduation Year</label>
+            <select id="conditions-checkbox" class="form-select" required>
+              <option selected>Choose...</option>
+              <option>2020</option>
+              <option>2021</option>
+              <option>2022</option>
+              <option>202</option>
+            </select>
+        </div>
+        <div class="col-md-3">
+          <label for="inputrollno" class="form-label">Roll No.</label>
+          <input type="number" class="form-control" id="roll-no-input" required>
+        </div>
+        <div class="col-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
+            <label class="form-check-label" for="gridCheck">
+              Agree to terms and conditions
+            </label>
+          </div>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Submit form</button>
+        </div>
+      </form>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
-
 </html>
