--- a/main.html
+++ b/main.html
@@ -11,24 +11,24 @@
     <h2 class="tA fS">Internship Form</h2>
     <form class="row g-3">
         <div class="col-md-4">
-          <label for="inputfirstname" class="form-label">First Name</label>
+          <label for="first-name-input" class="form-label">First Name</label>
           <input type="text" class="form-control" id="first-name-input" required>
         </div>
         <div class="col-md-4">
-          <label for="inputlastname" class="form-label">Last Name</label>
+          <label for="last-name-input" class="form-label">Last Name</label>
           <input type="text" class="form-control" id="last-name-input" required>
         </div>
         <div class="col-md-4">
-            <label for="inputemail" class="form-label">Email Address</label>
+            <label for="email-input" class="form-label">Email Address</label>
             <input type="email" class="form-control" id="email-input" required>
           </div>
         <div class="col-5">
-          <label for="inputcollege" class="form-label">College</label>
+          <label for="college-input" class="form-label">College</label>
           <input type="text" class="form-control" id="college-input" required>
         </div>
         <div class="col-md-4">
-            <label for="inputgraduationyear" class="form-label">Graduation Year</label>
-            <select id="conditions-checkbox" class="form-select" required>
+            <label for="grad-year-select" class="form-label">Graduation Year</label>
+            <select id="grad-year-select" class="form-select" required>
               <option selected>Choose...</option>
               <option>2020</option>
               <option>2021</option>
@@ -37,13 +37,13 @@
             </select>
         </div>
         <div class="col-md-3">
-          <label for="inputrollno" class="form-label">Roll No.</label>
-          <input type="number" class="form-control" id="roll-no-input" required>
+          <label for="roll-no-input" class="form-label">Roll No.</label>
+          <input type="text" class="form-control" id="roll-no-input" required>
         </div>
         <div class="col-12">
           <div class="form-check">
             <input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
-            <label class="form-check-label" for="gridCheck">
+            <label class="form-check-label" for="conditions-checkbox">
               Agree to terms and conditions
             </label>
           </div>
