--- a/main.html
+++ b/main.html
@@ -42,10 +42,10 @@
             <label for="grad-year-select" class="form-label">Graduation Year</label>
             <select id="grad-year-select" class="form-select" required>
               <option selected>Choose...</option>
-              <option>2020</option>
-              <option>2021</option>
-              <option>2022</option>
-              <option>202</option>
+              <option value="2020">2020</option>
+              <option value="2021">2021</option>
+              <option value="2022">2022</option>
+              <option value="2023">202</option>
             </select>
 			<div class="invalid-feedback">
                 Please provide a valid Graduationn year.
